--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,25 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven{
+            url 'https://maven.google.com'
+        }
         jcenter() // Warning: this repository is going to shut down soon
+        maven{
+            url 'https://maven.fabric.io/public'
+        }
+    }
+    dependencyResolutionManagement {
+        repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+        repositories {
+            google()
+            mavenCentral()
+            maven {
+                url 'https://maven.google.com'
+            }
+            jcenter()
+            maven { url 'https://maven.fabric.io/public' }
+        }
     }
 }
 rootProject.name = "cg24"
