--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,13 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.13'
 
 
+
+        // 일반 로그인 추가 사항
+        // implementation 'com.google.firebase:firebase-auth'
+        // implementation platform('com.google.firebase:firebase-bom:30.2.0')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
