[feat] 바코드 화면 이동, 크기 조절
기존의 바코드가 작아서 바코드를 클릭하면 바코드만 있는 화면으로 이동.
그 후 줌인/아웃 기능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
             android:name="com.example.cg24.RegisterActivity"
             android:exported="false" />
 
+        <activity
+            android:name="com.example.cg24.barcode"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
