--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name="com.example.cg24.barcode"
             android:exported="false" />
 
+        <activity
+            android:name="com.example.cg24.water"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="API키" />
